Documentation related bug fixes - 2 Utility group functions that are causing herman errors. Disabled doc     - help();     - spacing();

--- a/scss/sin-core/functions/public/_help-func.scss
+++ b/scss/sin-core/functions/public/_help-func.scss
@@ -9,15 +9,18 @@
 @use 'sass:list';
 @use '../../misc/css-properties' as *;
 
-/// @name help
-/// @group utility
-/// @ignore @author Theodoros Kondakos
-/// @ignore @link https://github.com/TheoKondak
-/// @param {string} $config-sub-key - A key that you want it's values returned
-/// @param {map} $config-map - An optional parameter to set a different map instead of configuration
-/// @param {string} $intro-msg - A string that will work as a title, or intro text for the help context
-/// @return {string} - If $config-sub-key is null, then it will return the whole list of key value pairs, otherwise if a specific key is placed as input, it will return the list of key value pairs of this list only
-
+// @name help
+// @group utilityTest06
+// @param {string} $config-sub-key - A key that you want it's values returned
+// @param {map} $config-map - An optional parameter to set a different map instead of configuration
+// @param {string} $intro-msg - A string that will work as a title, or intro text for the help context
+// @return {string} - If $config-sub-key is null, then it will return the whole list of key value pairs, otherwise if a specific key is placed as input, it will return the list of key value pairs of this list only
+// @example sass See available colors
+//   @use 'sin' as *;
+//     .sin{
+//       @debug help(colors);
+//     }
+//
 @function help($config-sub-key: null, $config-map: $configuration, $intro-msg: 'Printing sinister configuration:', $msg: 'Documentation not found!') {
   // Check if $config-map is a map and it's not empty
   @if type-of($config-map) == map and length($config-map) >= 1 {
@@ -114,8 +117,8 @@
   } @else {
     @error 'help() called, with an invalid arguement. $config-map must be a type of map and with length larger than 1, recieved: #{type-of($config-map)} and a length of #{length($config-map)}.';
   }
-
-  @return 'End of help()';
+  @debug 'End of help()';
+  @return null;
 }
 
 @function hlp($config-sub-key: null, $config-map: $configuration) {
